# TXT-TRANS

./: .gitattributes  .gitignore  LICENCE  README.md  build.ps1  pyproject.toml  requirements.txt  run-gui.ps1  txt_trans.spec
docs/: architecture.md
gui/: main.py  userconf.yaml.example
models/nllb-200-distilled-600M-ct2/: config.json  tokenizer_config.json
scripts/: convert_app_icon.py  generate_nllb_languages.py  prepare_flet_client.py  setup_model.ps1
src/: chunker.py  languages.py  nllb_languages.json  path_helpers.py  translate.py  translator.py
tests/: sample_ja.txt  sample_zh.txt
